--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/project? createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true &useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/springdb?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=tru&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+server.port=8000
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-server.port=8089
+spring.jpa.hibernate.ddl-auto=update
+logging.level.root=INFO
+##logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
+server.servlet.context-path=/springdb
